GO-5589: Remove format from PropertyLinkWithValue for improved efficiency
